<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright (c) Petr Panteleyev. All rights reserved.
  Licensed under the BSD license. See LICENSE file in the project root for full license information.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.panteleyev.money</groupId>
    <artifactId>money-manager-desktop</artifactId>
    <version>22.0.2</version>
    <packaging>jar</packaging>
    <name>Money Manager Desktop</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
        <appModule>org.panteleyev.money</appModule>
        <appMainClass>org.panteleyev.money.MoneyApplication</appMainClass>
        <timestamp>${maven.build.timestamp}</timestamp>
        <!-- Plugins -->
        <mavenCompilerPluginVersion>3.8.1</mavenCompilerPluginVersion>
        <mavenJarPluginVersion>3.2.0</mavenJarPluginVersion>
        <mavenSurefirePluginVersion>3.0.0-M5</mavenSurefirePluginVersion>
        <mavenDependencyPluginVersion>3.1.1</mavenDependencyPluginVersion>
        <javaFxPluginVersion>0.0.6</javaFxPluginVersion>
        <jpackageMavenPluginVersion>1.5.1</jpackageMavenPluginVersion>
        <liquibasePluginVersion>4.4.0</liquibasePluginVersion>
        <!-- Dependencies -->
        <javaFxVersion>17.0.1</javaFxVersion>
        <javaFxHelpersVersion>1.9.0</javaFxHelpersVersion>
        <controlsFxVersion>11.1.0</controlsFxVersion>
        <ofxParserVersion>0.3.0</ofxParserVersion>
        <jsoupVersion>1.14.2</jsoupVersion>
        <gsonVersion>2.8.6</gsonVersion>
        <mysqlConnectorVersion>8.0.26</mysqlConnectorVersion>
        <freemarkerVersion>2.3.29</freemarkerVersion>
        <testNgVersion>7.4.0</testNgVersion>
        <h2Version>1.4.200</h2Version>
        <liquibaseVersion>4.8.0</liquibaseVersion>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.panteleyev.money</groupId>
            <artifactId>money-manager-model</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>java-fx-helpers</artifactId>
            <version>${javaFxHelpersVersion}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.panteleyev</groupId>
            <artifactId>ofx-parser</artifactId>
            <version>${ofxParserVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsFxVersion}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysqlConnectorVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoupVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gsonVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javaFxVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>${freemarkerVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>${liquibaseVersion}</version>
        </dependency>
        <!-- Test -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javaFxVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testNgVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2Version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mavenCompilerPluginVersion}</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${mavenJarPluginVersion}</version>
                <configuration>
                    <outputDirectory>target/jmods</outputDirectory>
                    <archive>
                        <manifestEntries>
                            <Main-Class>${appMainClass}</Main-Class>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${mavenDependencyPluginVersion}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>target/jmods</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${mavenSurefirePluginVersion}</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>
                        --enable-preview
                        --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
                        --add-opens javafx.graphics/javafx.scene=org.controlsfx.controls
                        --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                        --add-exports javafx.graphics/com.sun.javafx.embed=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>${jpackageMavenPluginVersion}</version>
                <configuration>
                    <name>Money Manager</name>
                    <appVersion>${project.version}</appVersion>
                    <vendor>panteleyev.org</vendor>
                    <runtimeImage>${java.home}</runtimeImage>
                    <module>${appModule}/${appMainClass}</module>
                    <modulePaths>
                        <modulePath>target/jmods</modulePath>
                    </modulePaths>
                    <destination>target/dist</destination>
                    <javaOptions>
                        <option>--enable-preview</option>
                        <option>-Dfile.encoding=UTF-8</option>
                        <option>--add-exports</option>
                        <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                    </javaOptions>
                </configuration>
                <executions>
                    <execution>
                        <id>mac</id>
                        <configuration>
                            <icon>icons/icons.icns</icon>
                        </configuration>
                    </execution>
                    <execution>
                        <id>linux</id>
                        <configuration>
                            <icon>icons/icon48.png</icon>
                        </configuration>
                    </execution>
                    <execution>
                        <id>win</id>
                        <configuration>
                            <icon>icons/icons.ico</icon>
                            <winMenu>true</winMenu>
                            <winDirChooser>true</winDirChooser>
                            <winUpgradeUuid>38dac4b6-91d2-4ca8-aacb-2e0cfd54127a</winUpgradeUuid>
                            <winMenuGroup>panteleyev.org</winMenuGroup>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javaFxPluginVersion}</version>
                <configuration>
                    <mainClass>${appModule}/${appMainClass}</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <options>
                                <option>--enable-preview</option>
                                <option>-Dfile.encoding=UTF-8</option>
                                <option>--add-exports</option>
                                <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                                <option>-Dprofile=${profile}</option>
                                <option>-Dnoauto=${noauto}</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>--enable-preview</option>
                                <option>-Dfile.encoding=UTF-8</option>
                                <option>--add-exports</option>
                                <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                                <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                <option>-Dprofile=${profile}</option>
                                <option>-Dnoauto=${noauto}</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
